Fix gaps between imgs in moving-present and zeno

--- a/css/moving-present.css
+++ b/css/moving-present.css
@@ -12,10 +12,9 @@ area {
   	cursor: url('../media/clickme.png'), pointer;
 }
 
-
 .wrapper {
 	display: grid;
-	grid-template-columns: repeat(750px, 5);
+	grid-template-columns: repeat(5, 750px);
 	grid-template-areas: 
 		"mp1 mp2 . . ."
 		"mp6 mp7 mp8 . ."
